More code clean up implemented